# eviction_model_api

./: README.md  pyproject.toml
Data/Eviction Tracking System/: austin_monthly_2020_2021.csv  austin_weekly_2020_2021.csv  dallas_monthly_2020_2021.csv
Data/Full_Data/: lagged_df.csv  modeling_df.csv
Data/cb_2021_48_tract_500k/: cb_2021_48_tract_500k.dbf  cb_2021_48_tract_500k.shp.ea.iso.xml  cb_2021_48_tract_500k.shp.iso.xml  cb_2021_48_tract_500k.shx
Jupyters/: EDA.ipynb  EDA_each_file  Get_data_CENSUS_USA.ipynb
Presentations/Poster/: 36x48 Poster Template 1.pptx  Poster-IVargas-Eviction.pptx
Presentations/Presentations/: Executive-Report-Eviction-and-Census-Data-Analysis-in-Texas-2020-2023.pptx
Presentations/Report/: Report.docx
app/: routes.py
src/eviction_model_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
