[project]
name = "eviction_model_api"
version = "0.1.0"
description = "Flask app to predict eviction risk using trained model"
authors = [{ name="Israel Vargas" }]
requires-python = ">=3.11"

dependencies = [
  "flask>=2.3.2",
  "numpy>=1.26.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.2",
  "pandas>=2.0.3",
  "seaborn>=0.12.2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
